@@ -1,3 +1,7 @@
+2010-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus.texi (Gravatars): Document gnus-gravatar-too-ugly.
+
 2010-10-06  Julien Danjou  <julien@danjou.info>
 
 	* sieve.texi (Manage Sieve API): Document sieve-manage-authenticate.
